# OpenGizmos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  DEVELOPMENT.md  FILE_FORMATS.md  GAME_FORMATS.md  MISSION_STRUCTURE.md  PALETTE_RESEARCH.md  STORYBOOK_WEAVER.md
include/: asset_cache.h  asset_viewer.h  audio.h  entity.h  font.h  game_loop.h  game_registry.h  grp_archive.h  input.h  menu.h  ne_resource.h  player.h  puzzle.h  renderer.h  room.h  smacker.h
include/bot/: bot_manager.h  educational_bot.h  gizmos_bot.h  neptune_bot.h
include/neptune/: neptune_game.h
src/: main.cpp
src/bot/: bot_manager.cpp  educational_bot.cpp  gizmos_bot.cpp  neptune_bot.cpp
src/engine/: asset_viewer.cpp  audio.cpp  font.cpp  game_loop.cpp  input.cpp  menu.cpp  renderer.cpp
src/formats/: dat_format.h  grp_format.h  ne_format.h  sprite_format.h
src/game/: entity.cpp  game_registry.cpp  player.cpp  puzzle.cpp  room.cpp
src/loader/: asset_cache.cpp  grp_archive.cpp  ne_resource.cpp  smacker.cpp  sprite_decoder.cpp
src/neptune/: neptune_game.cpp
src/tools/: asset_tool.cpp
tools/: decode_labyrinth.ps1  decode_reader.ps1  extract_labyrinth_sprites.ps1  extract_sorter_sprites.ps1
